Ajustes na organização dos arquivos

--- a/html/acessorios.html
+++ b/html/acessorios.html
@@ -8,9 +8,13 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="css/style.css"
+      href="../css/style.css"
     />
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../imagens/favicon.ico"
+      type="image/x-icon"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
       rel="stylesheet"
@@ -19,7 +23,7 @@
   <body>
     <header id="cabeçalho">
       <a href="index.html"
-        ><img class="imagem-cabeçalho" src="imagens/logo.png" /></a
+        ><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a
       ><!--logo da caltech-->
       <div class="hamburguer">
         <nav class="cabeçalho-menu">
@@ -51,7 +55,7 @@
           <div class="cabeçalho-menu-item">
             <a href="carrinho.html">
               <img
-                src="imagens/carrinho.png"
+                src="../imagens/carrinho.png"
                 alt="Carrinho"
                 style="width: 25px"
                 class="img-btn"
@@ -62,7 +66,7 @@
             <div class="dropdown">
               <span class="dropbtn"
                 ><img
-                  src="imagens/user-icon.png"
+                  src="../imagens/user-icon.png"
                   alt="Acessar Conta"
                   style="width: 25px"
                   class="img-btn"
@@ -78,7 +82,7 @@
     </header>
 
     <div class="img-banner">
-      <img src="imagens/star-wars-banner.jpg" alt="Sessão Geek" />
+      <img src="../imagens/star-wars-banner.jpg" alt="Sessão Geek" />
     </div>
 
     <main class="conteudo">
