--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -1,84 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <title>Caltech Wear</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="../css/style.css"
-    />
-    <link
-      rel="shortcut icon"
-      href="../imagens/favicon.ico"
-      type="image/x-icon"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header id="cabeçalho">
-      <a href="index.html"
-        ><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a
-      ><!--logo da caltech-->
-      <div class="hamburguer">
-        <nav class="cabeçalho-menu">
-          <!--menu-->
-          <ul>
-            <li>
-              <a href="acessorios.html" class="cabeçalho-menu-item"
-                >Acessórios</a
-              >
-            </li>
-            <li>
-              <a href="camisas.html" class="cabeçalho-menu-item">Camisas</a>
-            </li>
-            <li>
-              <a href="moletom.html" class="cabeçalho-menu-item">Moletom</a>
-            </li>
-            <li>
-              <a href="calcas.html" class="cabeçalho-menu-item">Calças</a>
-            </li>
-            <li>
-              <a href="shorts.html" class="cabeçalho-menu-item">Shorts</a>
-            </li>
-            <li>
-              <a class="cabeçalho-menu-item" href="faleConosco.html"
-                >Fale Conosco</a
-              >
-            </li>
-          </ul>
-          <div class="cabeçalho-menu-item">
-            <a href="carrinho.html">
-              <img
-                src="../imagens/carrinho.png"
-                alt="Carrinho"
-                style="width: 25px"
-                class="img-btn"
-              />
-            </a>
-          </div>
-          <div class="cabeçalho-menu-item">
-            <div class="dropdown">
-              <span class="dropbtn"
-                ><img
-                  src="../imagens/user-icon.png"
-                  alt="Acessar Conta"
-                  style="width: 25px"
-                  class="img-btn"
-              /></span>
-              <div class="dropdown-content">
-                <a href="#">Login</a>
-                <a href="cadastro.html">Cadastrar-se</a>
-              </div>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Caltech Wear</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
+  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <header id="cabeçalho">
+    <a href="index.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
+    <!--logo da caltech-->
+    <div class="hamburguer">
+      <nav class="cabeçalho-menu">
+        <!--menu-->
+        <ul>
+          <li>
+            <a href="acessorios.html" class="cabeçalho-menu-item">Acessórios</a>
+          </li>
+          <li>
+            <a href="camisas.html" class="cabeçalho-menu-item">Camisas</a>
+          </li>
+          <li>
+            <a href="moletom.html" class="cabeçalho-menu-item">Moletom</a>
+          </li>
+          <li>
+            <a href="calcas.html" class="cabeçalho-menu-item">Calças</a>
+          </li>
+          <li>
+            <a href="shorts.html" class="cabeçalho-menu-item">Shorts</a>
+          </li>
+        </ul>
+        <div class="cabeçalho-menu-item">
+          <div class="dropdown">
+            <span class="dropbtn"><img src="../imagens/suporte.png" alt="suporte" style="width: 25px"
+                class="img-btn" /></span>
+            <div class="dropdown-content">
+              <a href="sobreNos.html">Sobre Nós</a>
+              <a href="cadastro.html">Fale Conosco</a>
             </div>
           </div>
-        </nav>
-      </div>
-    </header>
-  </body>
+        </div>
+        <div class="cabeçalho-menu-item">
+          <a href="carrinho.html">
+            <img src="../imagens/carrinho.png" alt="Carrinho" style="width: 25px" class="img-btn" />
+          </a>
+        </div>
+        <div class="cabeçalho-menu-item">
+          <div class="dropdown">
+            <span class="dropbtn"><img src="../imagens/user-icon.png" alt="Acessar Conta" style="width: 25px"
+                class="img-btn" /></span>
+            <div class="dropdown-content">
+              <a href="#">Login</a>
+              <a href="cadastro.html">Cadastrar-se</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
+</body>
+
 </html>
