Alterando Páginas de Camisa

--- a/html/camisas.html
+++ b/html/camisas.html
@@ -67,7 +67,7 @@
   </header>
 
   <div class="img-banner">
-    <img src="../imagens/star-wars-banner.jpg" alt="Sessão Geek" />
+    <img src="../imagens/Capas/coleção-geek.jpg" alt="Sessão Geek" />
   </div>
 
   <main class="conteudo">
@@ -75,8 +75,8 @@
     <div class="card">
       <img src="../imagens/Camisa/acdc.jpg" alt="Camisa AC/DC" style="width:100%">
       <h1>Camisa AC/DC</h1>
-      <p class="price">R$ 49.99</p>
-      <p>Algodão 100%</p>
+      <p class="preco">R$ 49.99</p>
+      <p class="descricao">Algodão 100%</p>
       <p><button>Adicionar ao Carrinho</button></p>
     </div>
 
