Colocando os produtos na página

--- a/html/calcas.html
+++ b/html/calcas.html
@@ -154,6 +154,63 @@
       <p class="descricao">Algodão 100%</p>
       <p><button>Adicionar ao Carrinho</button></p>
     </div>
+
+    <!-- Calças Masculinas -->
+    <div class="card">
+      <img src="../imagens/Calças/Masculinas/jogger(frente).jpg" alt="Calça Jogger" style="width:100%">
+      <h1>Calça Jogger</h1>
+      <p class="preco">R$ 132,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Calças/Masculinas/jogger-1.jpg" alt="Calça Jogger Preta" style="width:100%">
+      <h1>Calça Jogger Preta</h1>
+      <p class="preco">R$ 134,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Calças/Masculinas/marmorizada(frente).jpg" alt="Calça marmorizada" style="width:100%">
+      <h1>Calça Marmorizada</h1>
+      <p class="preco">R$ 145,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Calças/Masculinas/reta(frente).jpg" alt="Calça Reta" style="width:100%">
+      <h1>Calça Reta</h1>
+      <p class="preco">R$ 125,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Calças/Masculinas/skinny(frente).jpg" alt="Calça Skinny Azul Claro" style="width:100%">
+      <h1>Calça Skinny Azul Claro</h1>
+      <p class="preco">R$ 132,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Calças/Masculinas/skinny-rasgada(frente).jpg" alt="Calça Skinny Rasgada" style="width:100%">
+      <h1>Calça Skinny Rasgada</h1>
+      <p class="preco">R$ 137,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Calças/Masculinas/slim(frente).jpg" alt="Calça slim" style="width:100%">
+      <h1>Calça slim</h1>
+      <p class="preco">R$ 127,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
   </main>
 
   <footer class="rodape">
