Pagina do Moletom

--- a/html/moletom.html
+++ b/html/moletom.html
@@ -67,7 +67,7 @@
   </header>
 
   <div class="img-banner">
-    <img src="../imagens/star-wars-banner.jpg" alt="Sessão Geek" />
+    <img src="../imagens/Capas/colecao-stranger-things.jpg" alt="Sessão Geek" />
   </div>
 
   <main class="conteudo">
@@ -113,7 +113,7 @@
 
     <div class="card">
       <img src="../imagens/Moletom/strange-things.jpg" alt="Moletom Strange Things" style="width:100%">
-      <h1>Moletom Strange Things</h1>
+      <h1>Moletom Stranger Things</h1>
       <p class="preco">R$ 129,99</p>
       <p class="descricao">Algodão 100%</p>
       <p><button>Adicionar ao Carrinho</button></p>
@@ -121,7 +121,7 @@
 
     <div class="card">
       <img src="../imagens/Moletom/cropped-strange-things.jpeg" alt="Cropped Strange Things" style="width:100%">
-      <h1>Moletom Strange Things</h1>
+      <h1>Moletom Stranger Things</h1>
       <p class="preco">R$ 117,99</p>
       <p class="descricao">Algodão 100%</p>
       <p><button>Adicionar ao Carrinho</button></p>
@@ -130,7 +130,7 @@
     <div class="card">
       <img src="../imagens/Moletom/strange-things-conjunto.jpeg" alt="Conjunto Moletom Strange Things"
         style="width:100%">
-      <h1>Conjunto Strange Things</h1>
+      <h1>Conjunto Stranger Things</h1>
       <p class="preco">R$ 224,99</p>
       <p class="descricao">Algodão 100%</p>
       <p><button>Adicionar ao Carrinho</button></p>
