Frente e Costas das Calças

--- a/html/calcas.html
+++ b/html/calcas.html
@@ -71,7 +71,7 @@
   </div>
 
   <main class="conteudo">
-    <!-- CARD CAMISAS -->
+    <!-- CARD CALÇAS -->
     <div class="card">
       <img src="../imagens/Calças/Femininas/mom.jpg" alt="Calça Mom" style="width:100%">
       <h1>Calça Mom</h1>
@@ -81,16 +81,20 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Femininas/mom.jpg" alt="Calça Mom" style="width:100%">
-      <h1>Calça Mom</h1>
-      <p class="preco">R$ 119,99</p>
+      <img src="../imagens/Calças/Femininas/mom-1.jpg" alt="Calça Mom" style="width:100%">
+      <h1>Calça Mom Azul Escuro</h1>
+      <p class="preco">R$ 123,99</p>
       <p class="descricao">Algodão 100%</p>
       <p><button>Adicionar ao Carrinho</button></p>
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Femininas/reta-cintura-alta(frente).jpg" alt="Calça Reta Cintura Alta"
-        style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Femininas/reta-cintura-alta(frente).jpg" alt="Calça Reta Cintura Alta"
+          style="width:100%">
+        <img src="../imagens/Calças/Femininas/reta-cintura-alta(atrás).jpg" alt="Calça Reta Cintura Alta"
+          style="width:100%">
+      </a>
       <h1>Calça Reta Cintura Alta</h1>
       <p class="preco">R$ 132,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -98,8 +102,12 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Femininas/reta-cintura-alta-azul(frente).jpg" alt="Calça Cintura Alta Azul"
-        style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Femininas/reta-cintura-alta-azul(frente).jpg" alt="Calça Cintura Alta Azul"
+          style="width:100%">
+        <img src="../imagens/Calças/Femininas/reta-cintura-alta-azul(atrás).jpg" alt="Calça Cintura Alta Azul"
+          style="width:100%">
+      </a>
       <h1>Calça Cintura Alta Azul</h1>
       <p class="preco">R$ 129,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -107,7 +115,10 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Femininas/skinny(frente).jpg" alt="Calça Skinny" style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Femininas/skinny(frente).jpg" alt="Calça Skinny" style="width:100%">
+        <img src="../imagens/Calças/Femininas/skinny(atrás).jpg" alt="Calça Skinny" style="width:100%">
+      </a>
       <h1>Calça Skinny</h1>
       <p class="preco">R$ 135,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -115,7 +126,10 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Femininas/skinny-basica(frente).jpg" alt="Calça Skinny Básica" style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Femininas/skinny-basica(frente).jpg" alt="Calça Skinny Básica" style="width:100%">
+        <img src="../imagens/Calças/Femininas/skinny-basica(atrás).jpg" alt="Calça Skinny Básica" style="width:100%">
+      </a>
       <h1>Calça Skinny Básica</h1>
       <p class="preco">R$ 115,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -147,8 +161,12 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Femininas/wide-leg-3(frente).jpg" alt="Calça Boca de Sino Barra Feita"
-        style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Femininas/wide-leg-3(frente).jpg" alt="Calça Boca de Sino Barra Feita"
+          style="width:100%">
+        <img src="../imagens/Calças/Femininas/wide-leg-3(atrás).jpg" alt="Calça Boca de Sino Barra Feita"
+          style="width:100%">
+      </a>
       <h1>Calça Boca de Sino Barra Feita</h1>
       <p class="preco">R$ 167,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -157,7 +175,10 @@
 
     <!-- Calças Masculinas -->
     <div class="card">
-      <img src="../imagens/Calças/Masculinas/jogger(frente).jpg" alt="Calça Jogger" style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Masculinas/jogger(frente).jpg" alt="Calça Jogger" style="width:100%">
+        <img src="../imagens/Calças/Masculinas/jogger(atrás).jpg" alt="Calça Jogger" style="width:100%">
+      </a>
       <h1>Calça Jogger</h1>
       <p class="preco">R$ 132,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -173,7 +194,10 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Masculinas/marmorizada(frente).jpg" alt="Calça marmorizada" style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Masculinas/marmorizada(frente).jpg" alt="Calça marmorizada" style="width:100%">
+        <img src="../imagens/Calças/Masculinas/marmorizada(atrás).jpg" alt="Calça marmorizada" style="width:100%">
+      </a>
       <h1>Calça Marmorizada</h1>
       <p class="preco">R$ 145,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -181,7 +205,10 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Masculinas/reta(frente).jpg" alt="Calça Reta" style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Masculinas/reta(frente).jpg" alt="Calça Reta" style="width:100%">
+        <img src="../imagens/Calças/Masculinas/reta(atrás).jpg" alt="Calça Reta" style="width:100%">
+      </a>
       <h1>Calça Reta</h1>
       <p class="preco">R$ 125,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -189,7 +216,10 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Masculinas/skinny(frente).jpg" alt="Calça Skinny Azul Claro" style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Masculinas/skinny(frente).jpg" alt="Calça Skinny Azul Claro" style="width:100%">
+        <img src="../imagens/Calças/Masculinas/skinny(atrás).jpg" alt="Calça Skinny Azul Claro" style="width:100%">
+      </a>
       <h1>Calça Skinny Azul Claro</h1>
       <p class="preco">R$ 132,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -197,7 +227,11 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Masculinas/skinny-rasgada(frente).jpg" alt="Calça Skinny Rasgada" style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Masculinas/skinny-rasgada(frente).jpg" alt="Calça Skinny Rasgada"
+          style="width:100%">
+        <img src="../imagens/Calças/Masculinas/skinny-rasgada(atrás).jpg" alt="Calça Skinny Rasgada" style="width:100%">
+      </a>
       <h1>Calça Skinny Rasgada</h1>
       <p class="preco">R$ 137,99</p>
       <p class="descricao">Algodão 100%</p>
@@ -205,7 +239,10 @@
     </div>
 
     <div class="card">
-      <img src="../imagens/Calças/Masculinas/slim(frente).jpg" alt="Calça slim" style="width:100%">
+      <a>
+        <img src="../imagens/Calças/Masculinas/slim(frente).jpg" alt="Calça slim" style="width:100%">
+        <img src="../imagens/Calças/Masculinas/slim(atrás).jpg" alt="Calça slim" style="width:100%">
+      </a>
       <h1>Calça slim</h1>
       <p class="preco">R$ 127,99</p>
       <p class="descricao">Algodão 100%</p>
