alterações nos cards e página acessórios

--- a/html/acessorios.html
+++ b/html/acessorios.html
@@ -6,6 +6,7 @@
   <title>Caltech Wear</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../css/cards.css" />
   <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
@@ -70,19 +71,13 @@
   </div>
 
   <main class="conteudo">
-    <section class="conteudo-principal">
-      <div class="conteudo-texto">
-        <h1 class="titulo-secao-um">Bermuda X</h1>
-        <h2 class="subtitulo-secao-um">Vista-se bem</h2>
-        <button class="botao-um">Compre já!</button>
-      </div>
-      <img class="imagem-produto-meio" />
-      <!--imagem do vestido x-->
-    </section>
-    <section class="conteudo-secundario">
-      <p class="conteudo-secundario-parag">descrição do produto</p>
-      <p class="conteudo-secundario-parag">piriri</p>
-    </section>
+    <div class="card">
+      <img src="../imagens/Calças/Femininas/mom-1.jpg" alt="Calça Mom" style="width:100%">
+      <h1>Calça Mom Azul Escuro</h1>
+      <p class="preco">R$ 123,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
   </main>
   <footer class="rodape">
     <!--rodapé nao sei oq vou por aqui-->
