--- a/html/moletom.html
+++ b/html/moletom.html
@@ -121,7 +121,7 @@
 
     <div class="card">
       <img src="../imagens/Moletom/cropped-strange-things.jpeg" alt="Cropped Strange Things" style="width:100%">
-      <h1>Moletom Stranger Things</h1>
+      <h1>Cropped Stranger Things</h1>
       <p class="preco">R$ 117,99</p>
       <p class="descricao">Algodão 100%</p>
       <p><button>Adicionar ao Carrinho</button></p>
