--- a/html/acessorios.html
+++ b/html/acessorios.html
@@ -67,15 +67,239 @@
   </header>
 
   <div class="img-banner">
-    <img src="../imagens/star-wars-banner.jpg" alt="Sessão Geek" />
+    <img src="../imagens/Capas/tbbt-fantasia.jpg" alt="Sessão Acessórios" />
   </div>
 
   <main class="conteudo">
     <div class="card">
-      <img src="../imagens/Calças/Femininas/mom-1.jpg" alt="Calça Mom" style="width:100%">
-      <h1>Calça Mom Azul Escuro</h1>
-      <p class="preco">R$ 123,99</p>
+      <img src="../imagens/Acessórios/almofada-capitao-america.jpg" alt="Almofada Capitão América" style="width:100%">
+      <h1>Almofada Capitão América</h1>
+      <p class="preco">R$ 44,99</p>
       <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/almofada-homem-aranha.jpg" alt="Almofada Homem-Aranha" style="width:100%">
+      <h1>Almofada Homem-Aranha</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <a>
+        <img src="../imagens/Acessórios/almofada-naruto(frente).jpg" alt="Almofada Naruto" style="width:100%">
+        <img src="../imagens/Acessórios/almofada-naruto(atrás).jpg" alt="Almofada Naruto" style="width:100%">
+      </a>
+      <h1>Almofada Naruto</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <a>
+        <img src="../imagens/Acessórios/almofada-naruto-1(frente).jpg" alt="Almofada Naruto" style="width:100%">
+        <img src="../imagens/Acessórios/almofada-naruto-1(atrás).jpg" alt="Almofada Naruto" style="width:100%">
+      </a>
+      <h1>Almofada Naruto</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/garrafa-harry-potter-750ml.jpg" alt="Garrafa Harry Potter" style="width:100%">
+      <h1>Garrafa Harry Potter</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Capacidade: 750ml</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/garrafa-jurassic-world-750ml.jpg" alt="Garrafa Jurassic World" style="width:100%">
+      <h1>Garrafa Jurassic World</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Capacidade: 750ml</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/garrafa-mickey-450ml.jpg" alt="Garrafa Mickey" style="width:100%">
+      <h1>Garrafa Mickey</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Capacidade: 450ml</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <a>
+        <img src="../imagens/Acessórios/garrafa-mickey-550ml(frente).jpg" alt="Garrafa Mickey" style="width:100%">
+        <img src="../imagens/Acessórios/garrafa-mickey-550ml(atrás).jpg" alt="Garrafa Mickey" style="width:100%">
+      </a>
+      <h1>Garrafa Mickey</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Capacidade: 550ml</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/garrafa-simpsons-350ml.jpg" alt="Garrafa Simpsons" style="width:100%">
+      <h1>Garrafa Simpsons</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Capacidade: 350ml</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/garrafa-vingadores-350ml.jpg" alt="Garrafa Vingadores" style="width:100%">
+      <h1>Garrafa Vingadores</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Capacidade: 350ml</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/necessaire-harry-potter.jpg" alt="Necessaire Harry Potter" style="width:100%">
+      <h1>Necessaire Harry Potter</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/necessaire-minnie.jpg" alt="Necessaire Minnie" style="width:100%">
+      <h1>Necessaire Minnie</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/necessaire-sonic.jpg" alt="Necessaire Sonic" style="width:100%">
+      <h1>Necessaire Sonic</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/necessaire-star-wars.jpg" alt="Necessaire Star Wars" style="width:100%">
+      <h1>Necessaire Star Wars</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/necessaire-stranger-things.jpg" alt="Necessaire Stranger Things"
+        style="width:100%">
+      <h1>Necessaire Stranger Things</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <a>
+        <img src="../imagens/Acessórios/pelucia-disney.jpg" alt="Pelúcia Pato Donald" style="width:100%">
+        <img src="../imagens/Acessórios/pelucia-disney(1).jpg" alt="Pelúcia Pato Donald" style="width:100%">
+      </a>
+      <h1>Pelúcia Pato Donald</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/pelucia-pokemon-2.jpg" alt="Pelúcia Pokémon - Pikachu" style="width:100%">
+      <h1>Pelúcia Pokémon - Pikachu</h1>
+      <p class="preco">R$ 399,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/pelucia-pokemon.jpg" alt="Pelúcia Pokémon - Snorlax" style="width:100%">
+      <h1>Pelúcia Pokémon - Snorlax</h1>
+      <p class="preco">R$ 399,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <a>
+        <img src="../imagens/Acessórios/pelucia-star-wars(frente).jpg" alt="Pelúcia Chewbaka" style="width:100%">
+        <img src="../imagens/Acessórios/pelucia-star-wars(atrás).jpg" alt="Pelúcia Chewbaka" style="width:100%">
+      </a>
+      <h1>Pelúcia Chewbaka</h1>
+      <p class="preco">R$ 199,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <a>
+        <img src="../imagens/Acessórios/pochete-minnie(frente).jpg" alt="Pochete Minnie" style="width:100%">
+        <img src="../imagens/Acessórios/pochete-minnie(atrás).jpg" alt="Pochete Minnie" style="width:100%">
+      </a>
+      <h1>Pochete Minnie</h1>
+      <p class="preco">R$ 49,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/shoulder-bag-batman.jpg" alt="Sholder Bag Batman" style="width:100%">
+      <h1>Sholder Bag Batman</h1>
+      <p class="preco">R$ 129,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/shoulder-bag-friends.jpg" alt="Sholder Bag Friends" style="width:100%">
+      <h1>Sholder Bag Friends</h1>
+      <p class="preco">R$ 129,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/shoulder-bag-got.jpg" alt="Sholder Bag Game of Thrones" style="width:100%">
+      <h1>Sholder Bag Game of Thrones</h1>
+      <p class="preco">R$ 129,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/shoulder-bag-tomejerry.jpg" alt="Sholder Bag Tom & Jerry" style="width:100%">
+      <h1>Sholder Bag Tom & Jerry</h1>
+      <p class="preco">R$ 129,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <a>
+        <img src="../imagens/Acessórios/jogo-de-cama-star-wars.jpg" alt="Jogo de Cama Casal Star Wars - 4pcs"
+          style="width:100%">
+        <img src="../imagens/Acessórios/jogo-de-cama-star-wars(capa).jpg" alt="Jogo de Cama Casal Star Wars - 4pcs"
+          style="width:100%">
+      </a>
+      <h1>Jogo de Cama Casal Star Wars - 4pcs</h1>
+      <p class="preco">R$ 149,99</p>
+      <p class="descricao">Algodão 100%</p>
+      <p><button>Adicionar ao Carrinho</button></p>
+    </div>
+
+    <div class="card">
+      <img src="../imagens/Acessórios/poster-star-wars.jpg" alt="Poster Star Wars" style="width:100%">
+      <h1>Poster Star Wars</h1>
+      <p class="preco">R$ 129,99</p>
+      <p class="descricao">30cm x 40cm</p>
       <p><button>Adicionar ao Carrinho</button></p>
     </div>
   </main>
