Reformando a página Sobre Nós

--- a/html/sobreNos.html
+++ b/html/sobreNos.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Caltech Wear</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../css/pag-inicial.css" />
   <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
@@ -13,77 +13,12 @@
 </head>
 
 <body>
-  <header id="cabeçalho">
-    <a href="index.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
-    <!--logo da caltech-->
-    <div class="hamburguer">
-      <nav class="cabeçalho-menu">
-        <!--menu-->
-        <ul>
-          <li>
-            <a href="acessorios.html" class="cabeçalho-menu-item">Acessórios</a>
-          </li>
-          <li>
-            <a href="camisas.html" class="cabeçalho-menu-item">Camisas</a>
-          </li>
-          <li>
-            <a href="moletom.html" class="cabeçalho-menu-item">Moletom</a>
-          </li>
-          <li>
-            <a href="calcas.html" class="cabeçalho-menu-item">Calças</a>
-          </li>
-          <li>
-            <a href="shorts.html" class="cabeçalho-menu-item">Shorts</a>
-          </li>
-        </ul>
-        <div class="cabeçalho-menu-item">
-          <div class="dropdown">
-            <span class="dropbtn"><img src="../imagens/suporte.png" alt="suporte" style="width: 25px"
-                class="img-btn" /></span>
-            <div class="dropdown-content">
-              <a href="sobreNos.html">Sobre Nós</a>
-              <a href="cadastro.html">Fale Conosco</a>
-            </div>
-          </div>
-        </div>
-        <div class="cabeçalho-menu-item">
-          <a href="carrinho.html">
-            <img src="../imagens/carrinho.png" alt="Carrinho" style="width: 25px" class="img-btn" />
-          </a>
-        </div>
-        <div class="cabeçalho-menu-item">
-          <div class="dropdown">
-            <span class="dropbtn"><img src="../imagens/user-icon.png" alt="Acessar Conta" style="width: 25px"
-                class="img-btn" /></span>
-            <div class="dropdown-content">
-              <a href="#">Login</a>
-              <a href="cadastro.html">Cadastrar-se</a>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </div>
-  </header>
+  <div class="conteudo">
+    <img src="../imagens/logo-branco.png" alt="Caltech" style="width:30%">
 
-  <div class="img-banner">
-    <img src="../imagens/star-wars-banner.jpg" alt="Sessão Geek" />
+    <h1>Onde os <em>Nerds</em> se encontram e mostram que tem estilo</h1>
   </div>
 
-  <main class="conteudo">
-    <section class="conteudo-principal">
-      <div class="conteudo-texto">
-        <h1 class="titulo-secao-um">Bermuda X</h1>
-        <h2 class="subtitulo-secao-um">Vista-se bem</h2>
-        <button class="botao-um">Compre já!</button>
-      </div>
-      <img class="imagem-produto-meio" />
-      <!--imagem do vestido x-->
-    </section>
-    <section class="conteudo-secundario">
-      <p class="conteudo-secundario-parag">descrição do produto</p>
-      <p class="conteudo-secundario-parag">piriri</p>
-    </section>
-  </main>
   <footer class="rodape">
     <!--rodapé nao sei oq vou por aqui-->
     <img class="rodape-imagem" />
