Iniciando a página de apresentação

--- a/html/sobreNos.html
+++ b/html/sobreNos.html
@@ -14,9 +14,21 @@
 
 <body>
   <div class="conteudo">
-    <img src="../imagens/logo-branco.png" alt="Caltech" style="width:30%">
+    <div class="imageBox">
+      <div class="imageIn">
+        <a href="index.html">
+          <img class="round aligncenter" src="../imagens/logo-branco.png" style="width: 30%;" />
+        </a>
+      </div>
+      <div class="hoverImg">
+        <a href="index.html">
+          <img class="round aligncenter" src="../imagens/pag-inicial.png" style="width: 30%;" />
+        </a>
+      </div>
+    </div>
 
-    <h1>Onde os <em>Nerds</em> se encontram e mostram que tem estilo</h1>
+    <h1>O refúgio épico de um lugar cheio de histórias, onde há infinitas possibilidades de experiências inesquecíveis
+    </h1>
   </div>
 
   <footer class="rodape">
