Modificando a landing page

--- a/html/sobreNos.html
+++ b/html/sobreNos.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <h1>O refúgio épico de um lugar cheio de histórias, onde há infinitas possibilidades de experiências inesquecíveis
+    <h1>O refúgio épico, um lugar cheio de histórias, onde há infinitas possibilidades de experiências inesquecíveis
     </h1>
   </div>
 
