modificando a landing pag

--- a/html/sobreNos.html
+++ b/html/sobreNos.html
@@ -10,25 +10,30 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
     rel="stylesheet" />
+  <link href="https://allfont.net/allfont.css?fonts=star-jedi" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <div class="conteudo">
     <div class="imageBox">
-      <div class="imageIn">
+      <div class="top-img">
         <a href="index.html">
           <img class="round aligncenter" src="../imagens/logo-branco.png" style="width: 30%;" />
         </a>
       </div>
-      <div class="hoverImg">
+      <div class="hover-img">
         <a href="index.html">
           <img class="round aligncenter" src="../imagens/pag-inicial.png" style="width: 30%;" />
         </a>
       </div>
     </div>
 
-    <h1>O refúgio épico, um lugar cheio de histórias, onde há infinitas possibilidades de experiências inesquecíveis
+    <h1> o refúgio épico, um lugar cheio de histórias, onde há infinitas possibilidades de experiências inesquecíveis
     </h1>
+
+    <a>
+      <h4>saiba mais sobre os criadores da página</h4>
+    </a>
   </div>
 
   <footer class="rodape">
