Excluindo shorts.html e arrumando a pág de aprs

--- a/html/sobreNos.html
+++ b/html/sobreNos.html
@@ -2,52 +2,111 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Caltech Wear</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/pag-inicial.css" />
-  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
-    rel="stylesheet" />
-  <link href="https://allfont.net/allfont.css?fonts=star-jedi" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8" />
+    <title>Caltech Wear</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/pag-inicial.css" />
+    <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
+        rel="stylesheet" />
+    <link href="https://allfont.net/allfont.css?fonts=star-jedi" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <div class="conteudo">
-    <div class="imageBox">
-      <div class="top-img">
-        <a href="index.html">
-          <img class="round aligncenter" src="../imagens/logo-branco.png" style="width: 30%;" />
+    <div class="conteudo">
+        <div class="imageBox">
+            <div class="top-img">
+                <a href="index.html">
+                    <img class="round aligncenter" src="../imagens/logo-branco.png" style="width: 30%;" />
+                </a>
+            </div>
+            <div class="hover-img">
+                <a href="index.html">
+                    <img class="round aligncenter" src="../imagens/pag-inicial.png" style="width: 30%;" />
+                </a>
+            </div>
+        </div>
+
+        <h1> o refúgio épico, um lugar cheio de histórias, onde há infinitas possibilidades de experiências
+            inesquecíveis
+        </h1>
+    </div>
+    <div id="link-card">
+        <a href="#menu-card">
+            <h4>saiba mais sobre os criadores da página</h4>
         </a>
-      </div>
-      <div class="hover-img">
-        <a href="index.html">
-          <img class="round aligncenter" src="../imagens/pag-inicial.png" style="width: 30%;" />
-        </a>
-      </div>
+        <div class="menu-expansivo" id="menu-card">
+            <div id="hide-container">
+                <div class="card-container">
+                    <span class="pro">Estudante</span>
+                    <img class="round" src="../imagens/estudante-1.jpg" alt="user" style="width:50%" />
+                    <h3>Letícia Alves</h3>
+                    <h6>Guarulhos - SP</h6>
+                    <p>Estudante da UFES e <br />futura desenvolvedora front-end</p>
+                    <div class="buttons">
+                        <button class="primary">
+                            Sistemas de Informação
+                        </button>
+                        <button class="primary ghost">
+                            <strong>2021200529</strong>
+                        </button>
+                    </div>
+                    <div class="skills">
+                        <h6>Skills</h6>
+                        <ul>
+                            <li>Estudante de Front End</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card-container">
+                    <span class="pro">Estudante</span>
+                    <img class="round" src="../imagens/estudante-2.jpg" alt="user" style="width:50%" />
+                    <h3>Bryan Cantanheides</h3>
+                    <h6>Vila Velha - ES</h6>
+                    <p>Estudante da UFES e <br /> futuro desenvolvedor front-end</p>
+                    <div class="buttons">
+                        <button class="primary">
+                            Sistemas de Informação
+                        </button>
+                        <button class="primary ghost">
+                            <strong>2021200885</strong>
+                        </button>
+                    </div>
+                    <div class="skills">
+                        <h6>Skills</h6>
+                        <ul>
+                            <li>Estudante de Front End</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hide-container">
+
+            </div>
+        </div>
     </div>
 
-    <h1> o refúgio épico, um lugar cheio de histórias, onde há infinitas possibilidades de experiências inesquecíveis
-    </h1>
-
-    <a>
-      <h4>saiba mais sobre os criadores da página</h4>
-    </a>
-  </div>
-
-  <footer class="rodape">
-    <!--rodapé nao sei oq vou por aqui-->
-    <img class="rodape-imagem" />
-    <!--logo e tals-->
-    <section class="rodape-info">
-      <p>
-        <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
-          Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N -
-          CEP 29500-000 - Alegre - ES</small>
-      </p>
-    </section>
-  </footer>
+    <footer class="rodape">
+        <!--rodapé nao sei oq vou por aqui-->
+        <img class="rodape-imagem" />
+        <!--logo e tals-->
+        <section class="rodape-info">
+            <p>
+                <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
+                    Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N -
+                    CEP 29500-000 - Alegre - ES</small>
+            </p>
+        </section>
+    </footer>
 </body>
 
 </html>
