Mudando index.html para home

--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -14,7 +14,7 @@
 
 <body>
   <header id="cabeçalho">
-    <a href="index.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
+    <a href="home.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
     <!--logo da caltech-->
     <div class="hamburguer">
       <nav class="cabeçalho-menu">
