--- a/html/camisas.html
+++ b/html/camisas.html
@@ -15,7 +15,7 @@
 
   <body>
     <header id="cabeçalho">
-      <a href="index.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
+      <a href="home.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
       <!--logo da caltech-->
       <div class="hamburguer">
         <nav class="cabeçalho-menu">
