--- a/html/sobreNos.html
+++ b/html/sobreNos.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Caltech Wear</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/pag-inicial.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css" />
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
@@ -90,7 +90,10 @@
             </div>
 
             <div class="hide-container">
-
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5052.320173292763!2d-41.5364420167709!3d-20.762986187820708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbbebc4186d2fcb%3A0x391d53ad953b9078!2sUniversidade%20Federal%20do%20Esp%C3%ADrito%20Santo%20-%20UFES%20(Campus%20de%20Alegre)!5e0!3m2!1spt-BR!2sbr!4v1659512373491!5m2!1spt-BR!2sbr"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </div>
