--- a/html/index.html
+++ b/html/index.html
@@ -17,12 +17,12 @@
     <div class="conteudo">
         <div class="imageBox">
             <div class="top-img">
-                <a href="index.html">
+                <a href="home.html">
                     <img class="round aligncenter" src="../imagens/logo-branco.png" style="width: 30%;" />
                 </a>
             </div>
             <div class="hover-img">
-                <a href="index.html">
+                <a href="home.html">
                     <img class="round aligncenter" src="../imagens/pag-inicial.png" style="width: 30%;" />
                 </a>
             </div>
@@ -87,13 +87,32 @@
                         </ul>
                     </div>
                 </div>
-            </div>
 
-            <div class="hide-container">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5052.320173292763!2d-41.5364420167709!3d-20.762986187820708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbbebc4186d2fcb%3A0x391d53ad953b9078!2sUniversidade%20Federal%20do%20Esp%C3%ADrito%20Santo%20-%20UFES%20(Campus%20de%20Alegre)!5e0!3m2!1spt-BR!2sbr!4v1659512373491!5m2!1spt-BR!2sbr"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div id="descricao">
+                <div id="maps">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5052.320173292763!2d-41.5364420167709!3d-20.762986187820708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbbebc4186d2fcb%3A0x391d53ad953b9078!2sUniversidade%20Federal%20do%20Esp%C3%ADrito%20Santo%20-%20UFES%20(Campus%20de%20Alegre)!5e0!3m2!1spt-BR!2sbr!4v1659512373491!5m2!1spt-BR!2sbr"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="detalhes">
+                    <p>Nosso trabalho foi focado em produtos geek, os quais hoje em dia estão em
+                        alta
+                        pelos crianças e
+                        jovens,
+                        além de possuir uma taxa rentável no mercado têxtil. Este trabalho em si, foi de certo modo,
+                        difícil
+                        de
+                        ser feito devido algumas limitações da tecnologias HTML e CSS mas ainda sim, foi possível
+                        extrair o
+                        potencial máximo destas.
+                        Apesar de serem ferramentas não programáveis, continuam sendo pilares importantes para a
+                        construção
+                        não
+                        apenas deste site, mas de muitos outros existentes.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
