--- a/html/index.html
+++ b/html/index.html
@@ -89,15 +89,15 @@
                 </div>
 
             </div>
+            <div id="maps">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5052.320173292763!2d-41.5364420167709!3d-20.762986187820708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbbebc4186d2fcb%3A0x391d53ad953b9078!2sUniversidade%20Federal%20do%20Esp%C3%ADrito%20Santo%20-%20UFES%20(Campus%20de%20Alegre)!5e0!3m2!1spt-BR!2sbr!4v1659512373491!5m2!1spt-BR!2sbr"
+                    width="600" height="450" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
             <div id="descricao">
-                <div id="maps">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5052.320173292763!2d-41.5364420167709!3d-20.762986187820708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbbebc4186d2fcb%3A0x391d53ad953b9078!2sUniversidade%20Federal%20do%20Esp%C3%ADrito%20Santo%20-%20UFES%20(Campus%20de%20Alegre)!5e0!3m2!1spt-BR!2sbr!4v1659512373491!5m2!1spt-BR!2sbr"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
                 <div class="detalhes">
-                    <p>Nosso trabalho foi focado em produtos geek, os quais hoje em dia estão em
+                    <p style="color:white; padding: 30px;">Nosso trabalho foi focado em produtos geek, os quais hoje em
+                        dia estão em
                         alta
                         pelos crianças e
                         jovens,
@@ -115,20 +115,19 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <footer class="rodape">
-        <!--rodapé nao sei oq vou por aqui-->
-        <img class="rodape-imagem" />
-        <!--logo e tals-->
-        <section class="rodape-info">
-            <p>
-                <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
-                    Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N -
-                    CEP 29500-000 - Alegre - ES</small>
-            </p>
-        </section>
-    </footer>
+        <footer class="rodape">
+            <!--rodapé nao sei oq vou por aqui-->
+            <img class="rodape-imagem" />
+            <!--logo e tals-->
+            <section class="rodape-info">
+                <p>
+                    <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
+                        Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N -
+                        CEP 29500-000 - Alegre - ES</small>
+                </p>
+            </section>
+        </footer>
 </body>
 
 </html>
