--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div class="conteudo">
         <div class="imageBox">
             <div class="top-img">
-                <a href="home.html">
+                <a href="../Caltech/html/home.html">
                     <img class="round aligncenter" src="../imagens/logo-branco.png" style="width: 30%;" />
                 </a>
             </div>
             <div class="hover-img">
-                <a href="home.html">
+                <a href="../Caltech/html/home.html">
                     <img class="round aligncenter" src="../imagens/pag-inicial.png" style="width: 30%;" />
                 </a>
             </div>
