--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span class="pro">Estudante</span>
                     <img class="round" src="../imagens/estudante-1.jpg" alt="user" style="width:50%" />
                     <h3>Letícia Alves</h3>
-                    <h6>Guarulhos - SP</h6>
+                    <h6>São Paulo</h6>
                     <p>Estudante da UFES e <br />futura desenvolvedora front-end</p>
                     <div class="buttons">
                         <button class="primary">
@@ -67,7 +67,7 @@
                     <span class="pro">Estudante</span>
                     <img class="round" src="../imagens/estudante-2.jpg" alt="user" style="width:50%" />
                     <h3>Bryan Cantanheides</h3>
-                    <h6>Vila Velha - ES</h6>
+                    <h6>Espírito Santo</h6>
                     <p>Estudante da UFES e <br /> futuro desenvolvedor front-end</p>
                     <div class="buttons">
                         <button class="primary">
