--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Caltech Wear</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
@@ -17,33 +17,32 @@
     <div class="conteudo">
         <div class="imageBox">
             <div class="top-img">
-                <a href="../html/home.html">
-                    <img class="round aligncenter" src="../imagens/logo-branco.png" style="width: 30%;" />
+                <a href="html/home.html">
+                    <img class="round aligncenter" src="imagens/logo-branco.png" style="width: 30%;" />
                 </a>
             </div>
             <div class="hover-img">
-                <a href="../html/home.html">
-                    <img class="round aligncenter" src="../imagens/pag-inicial.png" style="width: 30%;" />
+                <a href="html/home.html">
+                    <img class="round aligncenter" src="imagens/pag-inicial.png" style="width: 30%;" />
                 </a>
             </div>
         </div>
 
-        <h1> o refúgio épico, um lugar cheio de histórias, onde há infinitas possibilidades de experiências
+        <h1> Um refúgio épico, um lugar cheio de histórias, com infinitas possibilidades de experiências
             inesquecíveis
         </h1>
     </div>
     <div id="link-card">
         <a href="#menu-card">
-            <h4>saiba mais sobre os criadores da página</h4>
+            <h4>Saiba mais sobre os criadores da página</h4>
         </a>
         <div class="menu-expansivo" id="menu-card">
             <div id="hide-container">
                 <div class="card-container">
-                    <span class="pro">Estudante</span>
-                    <img class="round" src="../imagens/estudante-1.jpg" alt="user" style="width:50%" />
+                    <img class="round" src="imagens/estudante1.jpg" alt="user" style="width:50%" />
                     <h3>Letícia Alves</h3>
                     <h6>São Paulo</h6>
-                    <p>Estudante da UFES e <br />futura desenvolvedora front-end</p>
+                    <p>Estudante da UFES</p>
                     <div class="buttons">
                         <button class="primary">
                             Sistemas de Informação
@@ -65,7 +64,7 @@
 
                 <div class="card-container">
                     <span class="pro">Estudante</span>
-                    <img class="round" src="../imagens/estudante-2.jpg" alt="user" style="width:50%" />
+                    <img class="round" src="imagens/estudante-2.jpg" alt="user" style="width:50%" />
                     <h3>Bryan Cantanheides</h3>
                     <h6>Espírito Santo</h6>
                     <p>Estudante da UFES e <br /> futuro desenvolvedor front-end</p>
@@ -96,15 +95,13 @@
             </div>
             <div id="descricao">
                 <div class="detalhes">
-                    <p style="color:white; padding: 30px;">Nosso trabalho foi focado em produtos geek, os quais hoje em
+                    <p style="color:white; padding: 30px;">Nosso trabalho foi direcionado ao mundo geek, nos quais hoje em
                         dia estão em
-                        alta
-                        pelos crianças e
-                        jovens,
-                        além de possuir uma taxa rentável no mercado têxtil. Este trabalho em si, foi de certo modo,
+                        alta.
+                        Possuindo também uma taxa rentável no mercado têxtil. Este trabalho em si, foi de certo modo,
                         difícil
                         de
-                        ser feito devido algumas limitações da tecnologias HTML e CSS mas ainda sim, foi possível
+                        ser feito devido algumas limitações da tecnologias HTML e CSS, mas ainda sim foi possível
                         extrair o
                         potencial máximo destas.
                         Apesar de serem ferramentas não programáveis, continuam sendo pilares importantes para a
